kustomizations/observability-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: observability-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - name: prometheus
    port: 8443
    protocol: HTTPS
    hostname: "<prometheus-dnsname>"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: prometheus-cert
  - name: victoria-logs
    port: 8443
    protocol: HTTPS
    hostname: "<victoria-logs-dnsname>"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: victoria-logs-cert
